@@ -1,3 +1,7 @@
+2009-09-23  Adrian Robert  <Adrian.B.Robert@gmail.com>
+
+	* term/ns-win.el (ns-reg-to-script): New variable.
+
 2009-09-23  Daiki Ueno  <ueno@unixuser.org>
 
 	* epg.el (epg-wait-for-status): Preserve existing 'error results.
